# agent-based-ml-training

./: .gitignore  LICENSE  README.md  example.md  experiments.json  main.py  pyproject.toml  requirements.txt  test_key.py
templates/iris_usecase/: experiments.json  schema.json  serve.py  train_model.py
utils/: agent_loop.py  agent_main.py  agent_validator.py  generate_serving.py  llm_logger.py  model_trainer.py  schema_builder.py  sqlite_db.py  subprocess_manager.py
